# timegrid-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md  fleet_batch_snapshot.py  json_schedule_template.py  manufacturing_capacity_slot.py  overnight_shift.py  run_all.py  sla_due_date.py
tests/: test_benchmark.py  test_timegrid.py
timegrid/: Cargo.toml
timegrid/src/: lib.rs
