[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "timegrid"
version = "0.1.0"
description = "A lightweight compiled timeline engine for operational availability, downtime, capacity, and JSON-backed definitions."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "gihanlee" }]
keywords = [
  "calendar",
  "availability",
  "capacity",
  "working-time",
  "business-hours",
  "scheduling",
  "intervals",
  "sla",
  "downtime",
  "operations",
  "simulation",
  "analytics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/code-gihan/timegrid-python"

[tool.maturin]
manifest-path = "timegrid/Cargo.toml"
module-name = "timegrid"
features = ["pyo3/extension-module"]
