[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "timegrid"
version = "0.1.5"
description = "Business-hours, availability, downtime, capacity, and SLA working-time calculations for Python, powered by Rust."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "gihanlee" }]
keywords = [
  "calendar",
  "business-hours",
  "working-time",
  "working-time-calculation",
  "availability",
  "availability-calendar",
  "capacity",
  "capacity-planning",
  "factory-calendar",
  "machine-downtime",
  "scheduling",
  "intervals",
  "sla",
  "sla-calculation",
  "downtime",
  "operations",
  "simulation",
  "analytics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/code-gihan/timegrid-python"
Issues = "https://github.com/code-gihan/timegrid-python/issues"
Examples = "https://github.com/code-gihan/timegrid-python/tree/main/examples"
"TimeGrid.NET" = "https://www.nuget.org/packages/TimeGrid.NET"

[tool.maturin]
manifest-path = "timegrid/Cargo.toml"
module-name = "timegrid"
features = ["pyo3/extension-module"]
